# flask-doc-extractor

./: .env.example  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt  wsgi.py
app/: __init__.py  config.py
app/models/: __init__.py  sales_order.py
app/routes/: files.py  invoices.py
app/services/: __init__.py  document_extractor.py  openai_client.py  r2_storage.py
instance/: invoices.db
scripts/: init_db.py
